extends Control

## MainMenu â€” Ð³Ð»Ð°Ð²Ð½Ð¾Ðµ Ð¼ÐµÐ½ÑŽ

@onready var play_button: Button = %PlayButton
@onready var host_button: Button = %HostButton
@onready var join_button: Button = %JoinButton
@onready var settings_button: Button = %SettingsButton
@onready var quit_button: Button = %QuitButton
@onready var title_label: Label = %Title


func _ready() -> void:
	_setup_ui()
	_connect_signals()
	play_button.grab_focus()


func _setup_ui() -> void:
	title_label.text = "DUNGEON CRAWL"
	play_button.text = "âš”ï¸  Ð˜Ð³Ñ€Ð°Ñ‚ÑŒ"
	host_button.text = "ðŸŒ  Ð¡Ð¾Ð·Ð´Ð°Ñ‚ÑŒ ÑÐµÑ€Ð²ÐµÑ€"
	join_button.text = "ðŸ”—  ÐŸÐ¾Ð´ÐºÐ»ÑŽÑ‡Ð¸Ñ‚ÑŒÑÑ"
	quit_button.text = "ðŸšª  Ð’Ñ‹Ñ…Ð¾Ð´"
	
	# ÐŸÐ¾ÐºÐ° Ð¼ÑƒÐ»ÑŒÑ‚Ð¸Ð¿Ð»ÐµÐµÑ€ Ð½Ðµ Ð³Ð¾Ñ‚Ð¾Ð² â€” Ð¿Ñ€ÑÑ‡ÐµÐ¼ ÐºÐ½Ð¾Ð¿ÐºÐ¸
	host_button.visible = false
	join_button.visible = false


func _connect_signals() -> void:
	play_button.pressed.connect(_on_play_pressed)
	host_button.pressed.connect(_on_host_pressed)
	join_button.pressed.connect(_on_join_pressed)
	settings_button.pressed.connect(_on_settings_pressed)
	quit_button.pressed.connect(_on_quit_pressed)


func _on_play_pressed() -> void:
	GameManager.is_multiplayer = false
	GameManager.change_scene("res://scenes/ui/class_select.tscn")


func _on_host_pressed() -> void:
	GameManager.is_multiplayer = true
	GameManager.change_scene("res://scenes/ui/class_select.tscn")


func _on_join_pressed() -> void:
	GameManager.is_multiplayer = true
	# TODO: Ð¿Ð¾ÐºÐ°Ð·Ð°Ñ‚ÑŒ Ð¾ÐºÐ½Ð¾ Ð²Ð²Ð¾Ð´Ð° IP
	pass


func _on_settings_pressed() -> void:
	var settings = preload("res://scenes/ui/settings_menu.tscn").instantiate()
	add_child(settings)


func _on_quit_pressed() -> void:
	get_tree().quit()
